app/globals.css
:root {
    --primary-color: hsl(24, 100%, 60%);
    --secondary-color: hsl(24, 81%, 55%);
    --primary-font-color: hsl(200, 10%, 23%);
    --secondary-font-color: hsl(208, 6%, 50%);
    --tertiary-font-color: hsl(0, 0%, 96%);
    --primary-background-color: hsl(0, 100%, 100%);
    --secondary-background-color: hsl(0, 0%, 98%);
    --tertiary-background-color: hsl(0, 0%, 84%);
    --primary-border-color: hsl(0, 0%, 95%);

    --box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
        rgba(168, 168, 168, 0.08) 0px 1px 1px 0px, rgba(195, 195, 195, 0.08) 0px 6px 6px 0px,
        rgba(255, 255, 255, 0.14) 0px 0.5px 8px 2px inset, rgba(255, 255, 255, 0.08) 0px -5px 0px -4px inset;
    --box-shadow-hover: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
        rgba(168, 168, 168, 0.08) 0px 1px 1px 0px, rgba(195, 195, 195, 0.08) 0px 6px 6px 0px,
        rgba(255, 255, 255, 0.14) 0px 0.5px 8px 2px inset, rgba(255, 255, 255, 0.08) 0px -5px 0px -4px inset;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

html,
body {
    background-color: var(--primary-background-color);
    color: var(--primary-font-color);
    overflow: hidden;
    max-width: 100vw;
    min-height: 100vh;
}

a {
    appearance: none;
    outline: 0;
    text-decoration: none;
}

button,
input {
    font-family: inherit;
}

